cabal-version:      2.4
name:               HMeguKin
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luis Alberto Díaz Díaz
maintainer:         73986926+Luis-omega@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

flag force-recomp
  description: Compile with -fforce-recomp and -Wunused-packages
  default:     False

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwrite-ide-info -fprint-potential-instances

  -- -fplugin=Effectful.Plugin
  -- -fwarn-missing-import-lists
  -- -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternGuards
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns


executable compiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.17.0.0
      ,HMeguKin
    import:           common-lang
    hs-source-dirs:   app
    default-language: Haskell2010

library 
  import: common-lang
  build-depends:
    base ^>=4.17.0.0
    ,array
    ,bytestring^>=0.11.3.1
    ,split
    ,prettyprinter
    ,text
  exposed-modules: 
    HMeguKin.Parser.Lexer
    HMeguKin.Parser.Types
    HMeguKin.Parser.Indenter
    HMeguKin.Parser.SST
    HMeguKin.Parser.Parser

test-suite HMeguKinTest
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends: 
    base ^>=4.17.0.0
    ,HMeguKin
    , hspec
    , tasty
    , tasty-hspec
    , tasty-rerun

  hs-source-dirs: tests
  other-modules:
    HMeguKin.Test.Parser.Indenter
